# ASPSynth-Clingo

./: .gitignore  README.md
benchmarks/: CMakeLists.txt  build_cmake.py
benchmarks/regular/1-call-site/: CMakeLists.txt  heappointsto.complement
benchmarks/regular/1-object/: CMakeLists.txt  heappointsto.complement  pointsto.complement
benchmarks/regular/1-object-1-type/: CMakeLists.txt  pointsto_objcont.complement
benchmarks/regular/1-type/: CMakeLists.txt  heappointsto.complement  pointsto.complement
benchmarks/regular/2-call-site/: CMakeLists.txt  heappointsto.complement  pointsto.complement
benchmarks/regular/abduce/: CMakeLists.txt  grandparent.complement
benchmarks/regular/andersen/: CMakeLists.txt  pt.complement
benchmarks/regular/animals/: CMakeLists.txt
benchmarks/regular/buildwall/: CMakeLists.txt  buildWall.complement
benchmarks/regular/cliquer/: CMakeLists.txt  Leg.complement
benchmarks/regular/downcast/: CMakeLists.txt  badCast.complement  ptsVT.complement  reachableCast.complement  unsafeDowncast.complement
benchmarks/regular/escape/: CMakeLists.txt  rHH.complement  rMH.complement  rRH.complement
benchmarks/regular/inflammation/: CMakeLists.txt  inflamation.complement
benchmarks/regular/modref/: CMakeLists.txt  modInstField.complement  modStatField.complement  rMM.complement  refInstField.complement  refStatField.complement
benchmarks/regular/nearlyscc/: CMakeLists.txt  NSCC.complement
benchmarks/regular/path/: CMakeLists.txt  path.complement
benchmarks/regular/polysite/: CMakeLists.txt  insvIM.complement  polySite.complement  virtI.complement
benchmarks/regular/rsg/: CMakeLists.txt  Rsg.complement
benchmarks/regular/rvcheck/: CMakeLists.txt  Correct.complement
benchmarks/regular/scc/: CMakeLists.txt  SCC.complement
benchmarks/regular/sgen/: CMakeLists.txt  sgen.complement
benchmarks/regular/ship/: CMakeLists.txt  ShipTo.complement
benchmarks/regular/small/: Ancestor.complement  CMakeLists.txt
benchmarks/regular/sql-01/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-02/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-03/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-04/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-05/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-06/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-07/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-08/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-09/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-10/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-11/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-12/: CMakeLists.txt  ans.complement
benchmarks/regular/sql-13/: CMakeLists.txt  Out.complement
benchmarks/regular/sql-14/: CMakeLists.txt  ans.complement  handle.cpp
benchmarks/regular/sql-15/: CMakeLists.txt  ans.complement
benchmarks/regular/traffic/: CMakeLists.txt  Crashes.complement
benchmarks/regular/union-find/: CMakeLists.txt  sameset.complement
benchmarks/scale/scc-100x-100/: CMakeLists.txt
benchmarks/scale/scc-100x-1000/: CMakeLists.txt
benchmarks/scale/scc-100x-500/: CMakeLists.txt
benchmarks/scale/scc-10x-100/: CMakeLists.txt  SCC.complement
benchmarks/scale/scc-10x-1000/: CMakeLists.txt  SCC.complement
benchmarks/scale/scc-10x-500/: CMakeLists.txt  SCC.complement
benchmarks/scale/scc-1x-100/: CMakeLists.txt  SCC.complement
benchmarks/scale/scc-1x-1000/: CMakeLists.txt  SCC.complement
benchmarks/scale/scc-1x-500/: CMakeLists.txt  SCC.complement
src/: aspsynth-clingo  translate2asp.py
